--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-    <title>Vietnguyen-profile</title>
+    <title>Nguyen Manh Viet</title>
 </head>
 <body>
     <div class="container">
@@ -12,10 +12,10 @@
         <p>Thái Thuỵ, Thái Bình</p>
         <p>Học viện Công nghệ Bưu chính Viễn thông</p>
         <div class="btn-container">
-            <form action="indexcontact.html">
+            <form action="contact.html">
                 <button>Liên hệ</button>
             </form>
-            <form action="indexinfomation.html">
+            <form action="infomation.html">
                 <button>Thông tin</button>
             </form>
         </div>
