Update and rename indexcontact.html to contact.html

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="stylecontact.css">
-    <title>Vietnguyen-profile-contact</title>
+    <title>Viet Nguyen Contact</title>
 </head>
 <body>
     <div class="container">
