Update and rename indexinfomation.html to infomation.html

--- a/infomation.html
+++ b/infomation.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styleinfomation.css">
-    <title>Vietnguyen-profile-contact</title>
+    <title>Viet Nguyen Infomation</title>
 </head>
 <body>
     <div style="background-image: url('img/background.jpg');" class="container">
