--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="img/avt_img.jpg" alt="">
+        <img src="img/IMG_0146.JPG" alt="">
         <h2>Nguyễn Mạnh Việt</h2>
         <p>Thái Thuỵ, Thái Bình</p>
         <p>Học viện Công nghệ Bưu chính Viễn thông</p>
